--- a/index.html
+++ b/index.html
@@ -3,16 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <title>Bram Reinold - Portfolio</title>
+
+    <!-- CUSTOM STYLESHEETS -->
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+
+    <!--[if lt IE 9]>
+    <script src="bower_components/html5shiv/dist/html5shiv.js"></script>
+    <![endif]-->
 </head>
 <body>
+    <section class="intro">
+        <div class="content">
+            <h1>Bram Reinold</h1>
+            <p>Portfolio</p>
+        </div><!-- end content-->
+        <div class="scroll-down">
+            Bekijk alle actuele projecten<br>
+            <img src="assets/img/icon-arrow-white-down.png" alt="naar beneden scroll icoon" width="10%">
+        </div><!-- end scroll-down-->
+    </section><!-- end section intro-->
     <header>
+        <div class="wrapper"></div>
         <div class="logo">Bram Reinold</div>
         <nav id="main-menu">
             <ul class="menu-sections">
                 <li>Home</li>
                 <li>Projecten</li>
                 <li>Contact</li>
-            </ul>
+            </ul>ccvvv
         </nav>
     </header>
     <footer>&copy; Bram Reinold</footer>
