Working on project section

--- a/index.html
+++ b/index.html
@@ -12,27 +12,58 @@
     <![endif]-->
 </head>
 <body>
+    <!--
+    ## INTRO SECTION
+    -->
     <section class="intro">
         <div class="content">
             <h1>Bram Reinold</h1>
             <p>Portfolio</p>
         </div><!-- end content-->
         <div class="scroll-down">
-            Bekijk alle actuele projecten<br>
+            Bekijk het portfolio door naar beneden te scrollen!<br>
             <img src="assets/img/icon-arrow-white-down.png" alt="naar beneden scroll icoon" width="10%">
         </div><!-- end scroll-down-->
     </section><!-- end section intro-->
-    <header>
-        <div class="wrapper"></div>
-        <div class="logo">Bram Reinold</div>
-        <nav id="main-menu">
-            <ul class="menu-sections">
-                <li>Home</li>
-                <li>Projecten</li>
-                <li>Contact</li>
-            </ul>ccvvv
-        </nav>
-    </header>
-    <footer>&copy; Bram Reinold</footer>
+
+    <!-- CONTENT -->
+    <div id="content" class="wrapper">
+
+        <!--
+        ## PROJECTS SECTION
+        -->
+        <section class="projects">
+            <div class="intro-text">
+                <h1>Mijn actuele projecten</h1>
+                <p>Deze projecten zijn tijdens mijn studie Informatie aan de Avans Hogeschool te Breda gemaakt of op aanvraag.</p>
+            </div>
+
+            <div class="project-block">
+                <div class="project-info">
+                    <div class="title">Project 1</div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin volutpat ligula sit amet sem fermentum, sed mattis ante facilisis.
+                        Suspendisse dictum ligula eu purus elementum cursus. Curabitur imperdiet rutrum nunc, ullamcorper fringilla massa ultricies vitae.
+                        Integer sed nibh commodo, elementum leo rutrum, finibus elit. Pellentesque aliquam libero neque.
+                    </p>
+                </div>
+                <div class="project-image"></div>
+
+            </div><!-- end project-block-->
+        </section><!-- end section projects-->
+
+    </div><!-- end content-->
+
+    <!--<header>-->
+        <!--<div class="wrapper"></div>-->
+        <!--<div class="logo">Bram Reinold</div>-->
+        <!--<nav id="main-menu">-->
+            <!--<ul class="menu-sections">-->
+                <!--<li>Home</li>-->
+                <!--<li>Projecten</li>-->
+                <!--<li>Contact</li>-->
+            <!--</ul>ccvvv-->
+        <!--</nav>-->
+    <!--</header>-->
+    <!--<footer>&copy; Bram Reinold</footer>-->
 </body>
 </html>
