--- a/index.html
+++ b/index.html
@@ -35,7 +35,15 @@
         <section class="projects">
             <div class="intro-text">
                 <h1>Mijn actuele projecten</h1>
-                <p>Deze projecten zijn tijdens mijn studie Informatie aan de Avans Hogeschool te Breda gemaakt of op aanvraag.</p>
+                <p>Deze projecten zijn tijdens mijn opleiding Informatica aan de Avans Hogeschool te Breda gemaakt of op aanvraag.</p>
+            </div>
+
+            <div class="projects-filter">
+                <strong>Sorteer op:</strong>
+                <div class="filter-button active">Actueel</div>
+                <div class="filter-button">Ouder</div>
+                <div class="filter-button">School</div>
+                <div class="filter-button">Eigen projecten</div>
             </div>
 
             <div class="project-block">
@@ -46,24 +54,51 @@
                         Integer sed nibh commodo, elementum leo rutrum, finibus elit. Pellentesque aliquam libero neque.
                     </p>
                 </div>
-                <div class="project-image"></div>
+                <img class="project-image" src="" alt="">
+            </div><!-- end project-block-->
 
+            <div class="project-block">
+                <div class="project-info">
+                    <div class="title">Project 1</div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin volutpat ligula sit amet sem fermentum, sed mattis ante facilisis.
+                        Suspendisse dictum ligula eu purus elementum cursus. Curabitur imperdiet rutrum nunc, ullamcorper fringilla massa ultricies vitae.
+                        Integer sed nibh commodo, elementum leo rutrum, finibus elit. Pellentesque aliquam libero neque.
+                    </p>
+                </div>
+                <img class="project-image" src="" alt="">
+            </div><!-- end project-block-->
+
+            <div class="project-block">
+                <div class="project-info">
+                    <div class="title">Project 1</div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin volutpat ligula sit amet sem fermentum, sed mattis ante facilisis.
+                        Suspendisse dictum ligula eu purus elementum cursus. Curabitur imperdiet rutrum nunc, ullamcorper fringilla massa ultricies vitae.
+                        Integer sed nibh commodo, elementum leo rutrum, finibus elit. Pellentesque aliquam libero neque.
+                    </p>
+                </div>
+                <img class="project-image" src="" alt="">
             </div><!-- end project-block-->
         </section><!-- end section projects-->
 
     </div><!-- end content-->
 
-    <!--<header>-->
-        <!--<div class="wrapper"></div>-->
-        <!--<div class="logo">Bram Reinold</div>-->
-        <!--<nav id="main-menu">-->
-            <!--<ul class="menu-sections">-->
-                <!--<li>Home</li>-->
-                <!--<li>Projecten</li>-->
-                <!--<li>Contact</li>-->
-            <!--</ul>ccvvv-->
-        <!--</nav>-->
-    <!--</header>-->
-    <!--<footer>&copy; Bram Reinold</footer>-->
+    <header>
+        <div class="wrapper"></div>
+        <div class="logo">Bram Reinold</div>
+        <nav id="main-menu">
+            <ul class="menu-sections">
+                <li>Home</li>
+                <li>Projecten</li>
+                <li>Contact</li>
+            </ul>ccvvv
+        </nav>
+    </header>
+    <footer>
+        © 2016 - Bram Reinold -
+        <ul>
+            <li><a href="https://github.com/brambooo/" target="_blank"> GitHub </a></li>
+            <li><a href="https://www.linkedin.com/in/bram-reinold-a343a266" target="_blank"> LinkedIn </a></li>
+        </ul>
+    </footer>
 </body>
 </html>
