--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 <!--
 ## INTRO SECTION
 -->
-<section class="intro">
+<section class="intro" data-parallax="scroll">
     <div class="content">
-        <img src="assets/img/bram-reinold-profile-image.jpg" alt="Bram Reinold afbeelding" class="icon-bram">
+        <img data-image-src="assets/img/bram-reinold-profile-image.jpg" src="assets/img/bram-reinold-profile-image.jpg" alt="Bram Reinold afbeelding" class="icon-bram" data-parallax="scroll">
         <h1>Bram Reinold</h1>
         <p>Junior Webdeveloper</p>
     </div><!-- end content-->
@@ -48,7 +48,7 @@
     <!--
     ## PROJECTS SECTION
     -->
-    <section class="projects">
+    <section id="projects">
         <div class="intro-text">
             <h1>Projecten</h1>
             <p>Deze projecten zijn tijdens mijn opleiding Informatica aan de Avans Hogeschool te Breda gemaakt of op aanvraag.</p>
@@ -56,50 +56,28 @@
 
         <div class="projects-filter">
             <strong>Sorteer op:</strong>
-            <div class="filter-button active">Actueel</div>
-            <div class="filter-button">Ouder</div>
-            <div class="filter-button">School</div>
-            <div class="filter-button">Eigen projecten</div>
+            <div class="filter btn active" data-filter="all">Alle</div>
+            <div class="filter btn" data-filter=".cat-web">Web</div>
+            <div class="filter btn" data-filter=".cat-desktop">Desktop</div>
+            <div class="filter btn" data-filter=".cat-school">School</div>
+            <div class="filter btn" data-filter=".cat-eigen">Op opdracht</div>
         </div>
 
-        <div class="project-block">
-            <div class="project-left">
-                <div class="project-info">
-                    <div class="title">Poezendorp van der Vorst</div>
-                    <p>Is een kattenpension website. Deze website is ontwikkeld voor het Wordpress CMS en hiervoor is een geheel eigen template ontwikkeld. Op deze website is het mogelijk om online te reserveren.
-                    </p>
-                </div>
-                <div class="project-buttons">
-                    <div class="button">Project informatie</div>
-                    <a class="button" href="http://poezendorpvandervorst.nl/" target="_blank">Website</a>
-                </div>
-            </div>
-            <div class="project-right">
-                <img class="project-image" src="" alt="">
-            </div>
-        </div><!-- end project-block-->
+        <div id="container" class="container">
 
-        <div class="project-block">
-            <div class="project-info">
-                <div class="title">Project 1</div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin volutpat ligula sit amet sem fermentum, sed mattis ante facilisis.
-                    Suspendisse dictum ligula eu purus elementum cursus. Curabitur imperdiet rutrum nunc, ullamcorper fringilla massa ultricies vitae.
-                    Integer sed nibh commodo, elementum leo rutrum, finibus elit. Pellentesque aliquam libero neque.
-                </p>
-            </div>
-            <img class="project-image" src="" alt="">
-        </div><!-- end project-block-->
+            <div class="mix cat-web cat-eigen" data-myorder="1"></div>
+            <div class="mix cat-web cat-eigen" data-myorder="2"></div>
+            <div class="mix cat-web cat-eigen" data-myorder="3"></div>
+            <div class="mix cat-web cat-school" data-myorder="4"></div>
+            <div class="mix cat-web cat-school" data-myorder="4"></div>
+            <div class="mix cat-web cat-school" data-myorder="4"></div>
+            <div class="mix cat-web cat-school" data-myorder="4"></div>
+            <div class="mix cat-web cat-school" data-myorder="4"></div>
 
-        <div class="project-block">
-            <div class="project-info">
-                <div class="title">Project 1</div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin volutpat ligula sit amet sem fermentum, sed mattis ante facilisis.
-                    Suspendisse dictum ligula eu purus elementum cursus. Curabitur imperdiet rutrum nunc, ullamcorper fringilla massa ultricies vitae.
-                    Integer sed nibh commodo, elementum leo rutrum, finibus elit. Pellentesque aliquam libero neque.
-                </p>
-            </div>
-            <img class="project-image" src="" alt="">
-        </div><!-- end project-block-->
+            <div class="gap"></div>
+
+        </div>
+
     </section><!-- end section projects-->
 
     <!--
@@ -172,10 +150,10 @@
             </div><!-- End skill-bar -->
 
             <div class="skill-bar" data-percent="50%">
-                <div class="skill-bar-title" style="background: #d35400;">
+                <div class="skill-bar-title" style="background: #690081;">
                     <span>C#</span>
                 </div>
-                <div class="skill-bar-loadingbar" style="background: #e67e22;"></div>
+                <div class="skill-bar-loadingbar" style="background: #9700ba;"></div>
                 <span class="skill-bar-percentage">90%</span>
             </div><!-- End skill-bar -->
 
@@ -219,7 +197,9 @@
     <!--</ul>-->
 </footer>
 
-<!-- CORE CUSTOM SCRIPTS -->
+<!-- CORE SCRIPTS -->
+<script src="assets/js/jquery.mixitup.js"></script>
+<script src="assets/js/parallax.min.js"></script>
 <script src="assets/js/custom.js"></script>
 
 </body>
