--- a/index.html
+++ b/index.html
@@ -63,16 +63,36 @@
             <div class="filter btn" data-filter=".cat-eigen">Op opdracht</div>
         </div>
 
-        <div id="container" class="container">
+        <div id="container" class="project-container">
 
-            <div class="mix cat-web cat-eigen" data-myorder="1"></div>
-            <div class="mix cat-web cat-eigen" data-myorder="2"></div>
-            <div class="mix cat-web cat-eigen" data-myorder="3"></div>
-            <div class="mix cat-web cat-school" data-myorder="4"></div>
-            <div class="mix cat-web cat-school" data-myorder="4"></div>
-            <div class="mix cat-web cat-school" data-myorder="4"></div>
-            <div class="mix cat-web cat-school" data-myorder="4"></div>
-            <div class="mix cat-web cat-school" data-myorder="4"></div>
+            <div class="project mix cat-web cat-eigen" data-myorder="1">
+                <div class="project-hover">
+                    <h3>Poezendorp van der Vorst</h3>
+                    <div class="actions">
+                        <a href="#" class="btn">Meer info</a>
+                        <a href="http://www.poezendorpvandervorst.nl" target="_blank" class="btn">Website</a>
+                    </div>
+                </div>
+            </div>
+            <div class="project mix cat-web cat-eigen" data-myorder="2">
+                <div class="project-hover">
+                    <h3>Poezendorp van der Vorst</h3>
+                    <div class="actions">
+                        <a href="#" class="btn">Meer info</a>
+                        <a href="http://www.poezendorpvandervorst.nl" target="_blank" class="btn">Website</a>
+                    </div>
+                </div>
+            </div>
+            <div class="project mix cat-web cat-eigen" data-myorder="3">
+                <div class="project-hover">
+                    <h3>Poezendorp van der Vorst</h3>
+                    <div class="actions">
+                        <a href="#" class="btn">Meer info</a>
+                        <a href="http://www.poezendorpvandervorst.nl" target="_blank" class="btn">Website</a>
+                    </div>
+                </div>
+            </div>
+
 
             <div class="gap"></div>
 
