Modified project filter

--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
             <div class="filter btn active" data-filter="all">Alle</div>
             <div class="filter btn" data-filter=".cat-web">Web</div>
             <div class="filter btn" data-filter=".cat-desktop">Desktop</div>
-            <div class="filter btn" data-filter=".cat-school">School</div>
-            <div class="filter btn" data-filter=".cat-eigen">Op opdracht</div>
+            <div class="filter btn" data-filter=".cat-app">App</div>
+            <!--<div class="filter btn" data-filter=".cat-school">School</div>-->
+            <!--<div class="filter btn" data-filter=".cat-eigen">Eigen opdrachten</div>-->
         </div>
 
         <div id="container" class="project-container">
@@ -71,28 +72,49 @@
                     <div class="actions">
                         <a href="#" class="btn">Meer info</a>
                         <a href="http://www.poezendorpvandervorst.nl" target="_blank" class="btn">Website</a>
-                    </div>
-                </div>
-            </div>
+                    </div><!-- end actions -->
+                </div><!-- end project-hover -->
+            </div><!-- end project -->
+
             <div class="project mix cat-web cat-eigen" data-myorder="2">
                 <div class="project-hover">
                     <h3>Poezendorp van der Vorst</h3>
                     <div class="actions">
                         <a href="#" class="btn">Meer info</a>
                         <a href="http://www.poezendorpvandervorst.nl" target="_blank" class="btn">Website</a>
-                    </div>
-                </div>
-            </div>
+                    </div><!-- end actions -->
+                </div><!-- end project-hover -->
+            </div><!-- end project -->
+
             <div class="project mix cat-web cat-eigen" data-myorder="3">
                 <div class="project-hover">
                     <h3>Poezendorp van der Vorst</h3>
                     <div class="actions">
                         <a href="#" class="btn">Meer info</a>
                         <a href="http://www.poezendorpvandervorst.nl" target="_blank" class="btn">Website</a>
-                    </div>
-                </div>
-            </div>
+                    </div><!-- end actions -->
+                </div><!-- end project-hover -->
+            </div><!-- end project -->
 
+            <div class="project mix cat-web cat-eigen" data-myorder="3">
+                <div class="project-hover">
+                    <h3>Poezendorp van der Vorst</h3>
+                    <div class="actions">
+                        <a href="#" class="btn">Meer info</a>
+                        <a href="http://www.poezendorpvandervorst.nl" target="_blank" class="btn">Website</a>
+                    </div><!-- end actions -->
+                </div><!-- end project-hover -->
+            </div><!-- end project -->
+
+            <div class="project mix cat-web cat-eigen" data-myorder="3">
+                <div class="project-hover">
+                    <h3>Poezendorp van der Vorst</h3>
+                    <div class="actions">
+                        <a href="#" class="btn">Meer info</a>
+                        <a href="http://www.poezendorpvandervorst.nl" target="_blank" class="btn">Website</a>
+                    </div><!-- end actions -->
+                </div><!-- end project-hover -->
+            </div><!-- end project -->
 
             <div class="gap"></div>
 
