--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 <body>
 
 
-
 <!--
 ## INTRO SECTION
 -->
-<section class="intro" data-parallax="scroll">
+<section id="intro" data-parallax="scroll">
     <div class="content">
-        <img data-image-src="assets/img/bram-reinold-profile-image.jpg" src="assets/img/bram-reinold-profile-image.jpg" alt="Bram Reinold afbeelding" class="icon-bram" data-parallax="scroll">
+        <img data-image-src="assets/img/bram-reinold-profile-image.jpg" src="assets/img/bram-reinold-profile-image.jpg"
+             alt="Bram Reinold afbeelding" class="icon-bram" data-parallax="scroll">
         <h1>Bram Reinold</h1>
         <p>Junior Webdeveloper</p>
     </div><!-- end content-->
@@ -39,8 +39,19 @@
     </div><!-- end scroll-down-->
 </section><!-- end section intro-->
 
-
-
+<header id="main-header">
+    <div class="wrapper">
+        <div class="logo">Bram Reinold</div>
+        <nav id="main-menu">
+            <ul class="menu-sections">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#projects">Projecten</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
 
 <!-- CONTENT -->
 <div id="content" class="wrapper">
@@ -51,7 +62,8 @@
     <section id="projects">
         <div class="intro-text">
             <h1>Projecten</h1>
-            <p>Deze projecten zijn tijdens mijn opleiding Informatica aan de Avans Hogeschool te Breda gemaakt of op aanvraag.</p>
+            <p>Deze projecten zijn tijdens mijn opleiding Informatica aan de Avans Hogeschool te Breda gemaakt of op
+                aanvraag.</p>
         </div>
 
         <div class="projects-filter">
@@ -125,11 +137,11 @@
     <!--
     ## PROJECTS SECTION
     -->
-    <section id=skills">
+    <section id="skills">
 
         <div class="intro-text">
             <h1>Skills</h1>
-            <p>Hieronder vind je mijn programmeer specialiteiten en welke doelen ik in de toekomst wil gaan behalen!</p>
+            <p>hieronder vind je mijn programmeer skills!</p>
         </div>
 
         <div class="skills">
@@ -220,28 +232,19 @@
     </section>
 </div><!-- end content-->
 
-<!--<header>-->
-<!--<div class="wrapper"></div>-->
-<!--<div class="logo">Bram Reinold</div>-->
-<!--<nav id="main-menu">-->
-<!--<ul class="menu-sections">-->
-<!--<li>Home</li>-->
-<!--<li>Projecten</li>-->
-<!--<li>Contact</li>-->
-<!--</ul>ccvvv-->
-<!--</nav>-->
-<!--</header>-->
 <footer>
     © 2016 - Bram Reinold -
-    <!--<ul>-->
-    <!--<li><a href="https://github.com/brambooo/" target="_blank"> GitHub </a></li>-->
-    <!--<li><a href="https://www.linkedin.com/in/bram-reinold-a343a266" target="_blank"> LinkedIn </a></li>-->
-    <!--</ul>-->
+    <ul>
+        <li><a href="https://github.com/brambooo/" target="_blank"> GitHub </a></li>
+        <li><a href="https://www.linkedin.com/in/bram-reinold-a343a266" target="_blank"> LinkedIn </a></li>
+    </ul>
 </footer>
 
 <!-- CORE SCRIPTS -->
 <script src="assets/js/jquery.mixitup.js"></script>
 <script src="assets/js/parallax.min.js"></script>
+<script src="https://cdn.jsdelivr.net/scrollreveal.js/3.3.1/scrollreveal.min.js"></script>
+<script src="https://cdn.rawgit.com/leafo/sticky-kit/v1.1.2/jquery.sticky-kit.min.js"></script>
 <script src="assets/js/custom.js"></script>
 
 </body>
