Fixed header, made it fixed to the top when you scroll down. Only have to fix a small bug

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 </head>
 <body>
 
-
 <!--
 ## INTRO SECTION
 -->
@@ -40,18 +39,18 @@
 </section><!-- end section intro-->
 
 <header id="main-header">
-    <div class="wrapper">
-        <div class="logo">Bram Reinold</div>
+    <div class="wrapper header-wrapper">
+        <div class="logo"><img src="assets/img/bramreinold-logo.png" alt="Bram Reinold logo"></div>
         <nav id="main-menu">
-            <ul class="menu-sections">
-                <li><a href="#home">Home</a></li>
+            <ul>
+                <li><a class="active" href="#home">Home</a></li>
                 <li><a href="#projects">Projecten</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
-        </nav>
-    </div>
-</header>
+        </nav><!-- end nav-->
+    </div><!-- end wrapper-->
+</header><!-- end header-->
 
 <!-- CONTENT -->
 <div id="content" class="wrapper">
