--- a/index.html
+++ b/index.html
@@ -232,10 +232,10 @@
 </div><!-- end content-->
 
 <footer>
-    © 2016 - Bram Reinold -
     <ul>
-        <li><a href="https://github.com/brambooo/" target="_blank"> GitHub </a></li>
-        <li><a href="https://www.linkedin.com/in/bram-reinold-a343a266" target="_blank"> LinkedIn </a></li>
+        <li>© Bram Reinold - 2016</li>
+        <li><a href="https://github.com/brambooo/" target="_blank" title="GitHub">GitHub</a></li>
+        <li><a href="https://www.linkedin.com/in/bram-reinold-a343a266" target="_blank" title="LinkedIn">LinkedIn</a></li>
     </ul>
 </footer>
 
