Fixed header menu items when hover, also added contact section (beginning)

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <meta name="author" content="Bram Reinold">
     <meta name="description" content="Het portfolio van Bram Reinold, Junior Webdeveloper te Breda.">
 
+    <!-- SETUP FAVICON -->
+    <link rel="shortcut " href="assets/img/favicon.png">
+
     <!-- CUSTOM STYLESHEETS -->
     <link rel="stylesheet" href="assets/css/custom_main.css" type="text/css">
     <link rel="stylesheet" href="assets/css/custom_skill_bar.css" type="text/css">
@@ -43,10 +46,10 @@
         <div class="logo"><img src="assets/img/bramreinold-logo-small.png" alt="Bram Reinold logo"></div>
         <nav id="main-menu">
             <ul>
-                <li><a class="active" href="#home">Home</a></li>
-                <li><a href="#projects">Projecten</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a class="active" href="#home" title="Home">Home</a></li>
+                <li><a href="#projects" title="Projecten">Projecten</a></li>
+                <li><a href="#skills" title="Skills">Skills</a></li>
+                <li><a href="#contact" title="Contact">Contact</a></li>
             </ul>
         </nav><!-- end nav-->
     </div><!-- end wrapper-->
@@ -227,7 +230,17 @@
             </div><!-- End skill-bar -->
         </div>
 
+    </section><!-- end section skills -->
+
+    <section id="contact">
+
+        <div class="intro-text">
+            <h1>Contact</h1>
+            <p>Neem gerust contact op via de onderstaande gegevens of het contactformulier! :-)</p>
+        </div><!-- end intro-text -->
+
     </section>
+
 </div><!-- end content-->
 
 <footer>
