--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     <!-- SETUP FAVICON -->
     <link rel="shortcut " href="assets/img/favicon.png">
 
-    <!-- CUSTOM STYLESHEETS -->
+    <!-- INCLUDED STYLESHEETS -->
     <link rel="stylesheet" href="assets/css/custom_main.css" type="text/css">
     <link rel="stylesheet" href="assets/css/custom_skill_bar.css" type="text/css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" type="text/css">
 
     <!-- INCLUDED SCRIPTS  -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
@@ -239,6 +240,31 @@
             <p>Neem gerust contact op via de onderstaande gegevens of het contactformulier! :-)</p>
         </div><!-- end intro-text -->
 
+        <div class="contact-wrapper">
+
+            <div class="contact-info">
+                <h2>Contactgegevens</h2>
+                <p><span class="fa fa-phone"></span>  info@bramreinold.nl</p>
+                <p><span class="fa fa-envelope"></span>  +31 (0)6 18 69 24 51</p>
+                <li><a href="https://github.com/brambooo/" target="_blank" title="GitHub"><p><span class="fa fa-github"></span>  GitHub</p></a>
+                <a href="https://www.linkedin.com/in/bram-reinold-a343a266" target="_blank" title="LinkedIn"><p><span class="fa fa-linkedin"></span>  LinkedIn</p></a>
+            </div><!-- end contact-info -->
+            
+            <div class="contact-form">
+                <h2>Contactformulier</h2>
+                <form action="#">
+                    <div class="form-user-info">
+                        <input name="name" type="text" placeholder="Naam">
+                        <input name="email" type="text" placeholder="Email">
+                        <input name="phone" type="text" placeholder="Telefoon">
+                    </div>
+                    <textarea name="message" cols="30" rows="1">Bericht</textarea>
+                    <input name="submit" type="submit">
+                </form>
+            </div>
+            
+        </div><!-- end contact-wrapper -->
+
     </section>
 
 </div><!-- end content-->
@@ -246,8 +272,8 @@
 <footer>
     <ul>
         <li>© Bram Reinold - 2016</li>
-        <li><a href="https://github.com/brambooo/" target="_blank" title="GitHub">GitHub</a></li>
-        <li><a href="https://www.linkedin.com/in/bram-reinold-a343a266" target="_blank" title="LinkedIn">LinkedIn</a></li>
+        <!--<li><a href="https://github.com/brambooo/" target="_blank" title="GitHub">GitHub</a></li>-->
+        <!--<li><a href="https://www.linkedin.com/in/bram-reinold-a343a266" target="_blank" title="LinkedIn">LinkedIn</a></li>-->
     </ul>
 </footer>
 
