Added new logo and updated css of it

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Het portfolio van Bram Reinold, Junior Webdeveloper te Breda.">
 
     <!-- SETUP FAVICON -->
-    <link rel="shortcut " href="assets/img/favicon.png">
+    <!--<link rel="shortcut " href="assets/img/favicon.png">-->
 
     <!-- INCLUDED STYLESHEETS -->
     <link rel="stylesheet" href="assets/css/custom_main.css" type="text/css">
@@ -44,7 +44,8 @@
 
 <header id="main-header">
     <div class="wrapper header-wrapper">
-        <div class="logo"><img src="assets/img/bramreinold-logo-small.png" alt="Bram Reinold logo"></div>
+        <!--<div class="logo"><img src="assets/img/bramreinold-logo-small.png" alt="Bram Reinold logo"></div>-->
+        <div class="logo"></div>
         <nav id="main-menu">
             <ul>
                 <li><a class="active" href="#home" title="Home">Home</a></li>
