Working on client side and server side validation for the contact form

--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
         <div class="logo"></div>
         <nav id="main-menu">
             <ul>
-                <li><a class="active" href="#home" title="Home">Home</a></li>
                 <li><a href="#projects" title="Projecten">Projecten</a></li>
                 <li><a href="#skills" title="Skills">Skills</a></li>
                 <li><a href="#contact" title="Contact">Contact</a></li>
@@ -253,7 +252,7 @@
             
             <div class="contact-form">
                 <h2>Contactformulier</h2>
-                <form action="#">
+                <form id="contact-form" action="#contact" method="post">
                     <div class="form-user-info">
                         <input name="name" type="text" placeholder="Naam">
                         <input name="email" type="text" placeholder="Email">
