--- a/index.html
+++ b/index.html
@@ -254,11 +254,11 @@
                 <h2>Contactformulier</h2>
                 <form id="contact-form" action="#contact" method="post">
                     <div class="form-user-info">
-                        <input name="name" type="text" placeholder="Naam">
-                        <input name="email" type="text" placeholder="Email">
+                        <input name="name" type="text" placeholder="Naam" required data-error-msg="Het naam veld is verplicht">
+                        <input name="email" type="email" placeholder="Email" required required data-error-msg="Email is verplicht">
                         <input name="phone" type="text" placeholder="Telefoon">
                     </div>
-                    <textarea name="message" cols="30" rows="1">Bericht</textarea>
+                    <textarea name="message" cols="30" rows="1"placeholder="Bericht" required data-error-msg="We need to know who you are"></textarea>
                     <input name="submit" type="submit">
                 </form>
             </div>
@@ -272,14 +272,13 @@
 <footer>
     <ul>
         <li>© Bram Reinold - 2016</li>
-        <!--<li><a href="https://github.com/brambooo/" target="_blank" title="GitHub">GitHub</a></li>-->
-        <!--<li><a href="https://www.linkedin.com/in/bram-reinold-a343a266" target="_blank" title="LinkedIn">LinkedIn</a></li>-->
     </ul>
 </footer>
 
 <!-- CORE SCRIPTS -->
 <script src="assets/js/jquery.mixitup.js"></script>
 <script src="assets/js/parallax.min.js"></script>
+<script src="assets/js/jquery.validate.min.js"></script>
 <script src="https://cdn.jsdelivr.net/scrollreveal.js/3.3.1/scrollreveal.min.js"></script>
 <script src="https://cdn.rawgit.com/leafo/sticky-kit/v1.1.2/jquery.sticky-kit.min.js"></script>
 <script src="assets/js/custom.js"></script>
