--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="assets/css/custom_main.css" type="text/css">
     <link rel="stylesheet" href="assets/css/custom_skill_bar.css" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.0/animate.min.css">
 
     <!-- INCLUDED SCRIPTS  -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
@@ -42,7 +43,7 @@
     </div><!-- end scroll-down-->
 </section><!-- end section intro-->
 
-<header id="main-header">
+<header id="main-header" class="fixed-header">
     <div class="wrapper header-wrapper">
         <!--<div class="logo"><img src="assets/img/bramreinold-logo-small.png" alt="Bram Reinold logo"></div>-->
         <div class="logo"></div>
@@ -85,7 +86,8 @@
                 <div class="project-hover">
                     <h3>Poezendorp van der Vorst</h3>
                     <div class="actions">
-                        <a href="#" class="btn">Meer info</a>
+                        <!--<a id="demo01" href="#animatedModal" class="btn">Meer info</a>-->
+                        <a id="demo01" href="project.html" class="btn">Meer info</a>
                         <a href="http://www.poezendorpvandervorst.nl" target="_blank" class="btn">Website</a>
                     </div><!-- end actions -->
                 </div><!-- end project-hover -->
@@ -136,6 +138,21 @@
         </div>
 
     </section><!-- end section projects-->
+
+    <div id="animatedModal">
+        <!--THIS IS IMPORTANT! to close the modal, the class name has to match the name given on the ID  class="close-animatedModal" -->
+        <div class="close-animatedModal">
+            Sluiten
+        </div>
+
+        <div class="modal-content">
+           <div class="project-title">Poezendorp van der Vorst</div>
+            <h1>Poezendorp van der Vorst</h1>
+
+            <h4>Projectinformatie:</h4>
+            <h4>Ontwikkeld met:</h4>
+        </div>
+    </div>
 
     <!--
     ## PROJECTS SECTION
@@ -278,10 +295,15 @@
 <!-- CORE SCRIPTS -->
 <script src="assets/js/jquery.mixitup.js"></script>
 <script src="assets/js/parallax.min.js"></script>
-<script src="assets/js/jquery.validate.min.js"></script>
+<script src="assets/js/animatedModal.min.js"></script>
+<script src="assets/js/jquery.fullPage.min.js"></script>
 <script src="https://cdn.jsdelivr.net/scrollreveal.js/3.3.1/scrollreveal.min.js"></script>
 <script src="https://cdn.rawgit.com/leafo/sticky-kit/v1.1.2/jquery.sticky-kit.min.js"></script>
 <script src="assets/js/custom.js"></script>
+
+<script>
+//    $("#demo01").animatedModal();
+</script>
 
 </body>
 </html>
