--- a/index.html
+++ b/index.html
@@ -298,6 +298,7 @@
 <script src="assets/js/animatedModal.min.js"></script>
 <script src="assets/js/jquery.fullPage.min.js"></script>
 <script src="https://cdn.jsdelivr.net/scrollreveal.js/3.3.1/scrollreveal.min.js"></script>
+<script src="//cdn.jsdelivr.net/jquery.scrollto/2.1.2/jquery.scrollTo.min.js"></script>
 <script src="assets/js/custom.js"></script>
 
 <script>
