Made header logo clickage with an a tag

--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
 
 <header id="main-header" class="fixed-header">
     <div class="wrapper header-wrapper">
-        <!--<div class="logo"><img src="assets/img/bramreinold-logo-small.png" alt="Bram Reinold logo"></div>-->
-        <div class="logo"></div>
+        <a href=""><div class="logo"></div></a>
         <nav id="main-menu">
             <ul>
                 <li><a href="#projects" title="Projecten">Projecten</a></li>
