Working on responsive mobile version of the website. Contact section is finished

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <!-- INCLUDED STYLESHEETS -->
     <link rel="stylesheet" href="assets/css/custom_main.css" type="text/css">
+    <link rel="stylesheet" href="assets/css/custom_responsive.css" type="text/css">
     <link rel="stylesheet" href="assets/css/custom_skill_bar.css" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.0/animate.min.css">
@@ -274,7 +275,7 @@
                         <input name="email" type="email" placeholder="Email" required required data-error-msg="Email is verplicht">
                         <input name="phone" type="text" placeholder="Telefoon">
                     </div>
-                    <textarea name="message" cols="30" rows="1"placeholder="Bericht" required data-error-msg="We need to know who you are"></textarea>
+                    <textarea class="custom-textarea" name="message" cols="30" rows="1"placeholder="Bericht" required data-error-msg="We need to know who you are"></textarea>
                     <input name="submit" type="submit">
                 </form>
             </div>
