Added responsive menu with hamburger open button and close button. Also modified responsive css

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--<meta name="format-detection" content="telephone=no">-->
     <meta http-equiv="content-language" content="NL">
     <title>Bram Reinold - Portfolio</title>
 
@@ -50,6 +52,10 @@
         <a href="">
             <div class="logo"></div>
         </a>
+        <div class="mobile-nav-wrapper">
+            <div class="mobile-menu-open-btn"></div>
+            <div class="mobile-menu-close-btn"></div>
+        </div>
         <nav id="main-menu">
             <ul>
                 <li><a href="#projects" title="Projecten">Projecten</a></li>
@@ -58,6 +64,13 @@
             </ul>
         </nav><!-- end nav-->
     </div><!-- end wrapper-->
+    <nav id="main-menu-mobile">
+        <ul>
+            <li><a href="#projects" title="Projecten">Projecten</a></li>
+            <li><a href="#skills" title="Skills">Skills</a></li>
+            <li><a href="#contact" title="Contact">Contact</a></li>
+        </ul>
+    </nav>
 </header><!-- end header-->
 
 <!-- CONTENT -->
