--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
     ## PROJECTS SECTION
     -->
     <section id="projects">
+        <div class="extra-spacing"></div>
         <div class="intro-text">
             <h1>Projecten</h1>
             <p>Deze projecten zijn tijdens mijn opleiding Informatica aan de Avans Hogeschool te Breda gemaakt of op
@@ -95,13 +96,6 @@
             <!--<div class="filter btn" data-filter=".cat-school">School</div>-->
             <!--<div class="filter btn" data-filter=".cat-eigen">Eigen opdrachten</div>-->
         </div>
-
-
-        <!--<select id="mobile-projectfilter" class="show-on-mobile hide-on-desktop">-->
-            <!--<option data-filter="all">Alle</option>-->
-            <!--<option class="filter active" data-filter=".cat-web">Web</option>-->
-            <!--<option data-filter=".cat-app">App</option>-->
-        <!--</select>-->
 
         <div id="container" class="project-container">
 
@@ -181,7 +175,7 @@
     ## PROJECTS SECTION
     -->
     <section id="skills">
-
+        <div class="extra-spacing"></div>
         <div class="intro-text">
             <h1>Skills</h1>
             <p>hieronder vind je mijn programmeer skills!</p>
@@ -274,7 +268,7 @@
     </section><!-- end section skills -->
 
     <section id="contact">
-
+        <div class="extra-spacing"></div>
         <div class="intro-text">
             <h1>Contact</h1>
             <p>Neem gerust contact op via de onderstaande gegevens of het contactformulier! :-)</p>
