--- a/index.html
+++ b/index.html
@@ -90,10 +90,11 @@
         <div class="projects-filter">
             <strong>Sorteer op:</strong>
             <div class="filter btn active" data-filter="all">Alle</div>
-            <div class="filter btn" data-filter=".cat-web">Web</div>
-            <div class="filter btn" data-filter=".cat-desktop">Desktop</div>
-            <div class="filter btn" data-filter=".cat-app">App</div>
-            <!--<div class="filter btn" data-filter=".cat-school">School</div>-->
+            <!--<div class="filter btn" data-filter=".cat-web">Websites</div>-->
+            <!--<div class="filter btn" data-filter=".cat-desktop">Desktop</div>-->
+            <!--<div class="filter btn" data-filter=".cat-app">App</div>-->
+            <div class="filter btn" data-filter=".cat-eigen">Eigen</div>
+            <div class="filter btn" data-filter=".cat-school">School</div>
             <!--<div class="filter btn" data-filter=".cat-eigen">Eigen opdrachten</div>-->
         </div>
 
@@ -104,8 +105,8 @@
                     <h3>Poezendorp van der Vorst</h3>
                     <div class="actions">
                         <!--<a id="demo01" href="#animatedModal" class="btn">Meer info</a>-->
-                        <a id="demo01" href="project.html" class="btn">Meer info</a>
-                        <a href="http://www.poezendorpvandervorst.nl" target="_blank" class="btn">Website</a>
+                        <!--<a id="demo01" href="project.html" class="btn">Meer info</a>-->
+                        <a href="http://www.ronvanrielschilderwerken.nl" target="_blank" class="btn">Website</a>
                     </div><!-- end actions -->
                 </div><!-- end project-hover -->
             </div><!-- end project -->
@@ -114,8 +115,8 @@
                 <div class="project-hover">
                     <h3>Poezendorp van der Vorst</h3>
                     <div class="actions">
-                        <a href="#" class="btn">Meer info</a>
-                        <a href="http://www.poezendorpvandervorst.nl" target="_blank" class="btn">Website</a>
+                        <!--<a href="#" class="btn">Meer info</a>-->
+                        <a href="http://www.parketexclusief.nl" target="_blank" class="btn">Website</a>
                     </div><!-- end actions -->
                 </div><!-- end project-hover -->
             </div><!-- end project -->
@@ -124,8 +125,8 @@
                 <div class="project-hover">
                     <h3>Poezendorp van der Vorst</h3>
                     <div class="actions">
-                        <a href="#" class="btn">Meer info</a>
-                        <a href="http://www.poezendorpvandervorst.nl" target="_blank" class="btn">Website</a>
+                        <!--<a href="#" class="btn">Meer info</a>-->
+                        <a href="http://www.segerenexpertise.nl" target="_blank" class="btn">Website</a>
                     </div><!-- end actions -->
                 </div><!-- end project-hover -->
             </div><!-- end project -->
@@ -134,18 +135,28 @@
                 <div class="project-hover">
                     <h3>Poezendorp van der Vorst</h3>
                     <div class="actions">
-                        <a href="#" class="btn">Meer info</a>
-                        <a href="http://www.poezendorpvandervorst.nl" target="_blank" class="btn">Website</a>
+                        <!--<a href="#" class="btn">Meer info</a>-->
+                        <a href="http://www.lionsfuse.nl" target="_blank" class="btn">Website</a>
                     </div><!-- end actions -->
                 </div><!-- end project-hover -->
             </div><!-- end project -->
 
-            <div class="project mix cat-web cat-eigen" data-myorder="3">
+            <div class="project mix cat-web cat-school" data-myorder="3">
                 <div class="project-hover">
-                    <h3>Poezendorp van der Vorst</h3>
+                    <h3>Webwinkel school project</h3>
                     <div class="actions">
-                        <a href="#" class="btn">Meer info</a>
-                        <a href="http://www.poezendorpvandervorst.nl" target="_blank" class="btn">Website</a>
+                        <!--<a href="#" class="btn">Meer info</a>-->
+                        <a href="http://bram.mai-web.eu/webwinkel" target="_blank" class="btn">Website</a>
+                    </div><!-- end actions -->
+                </div><!-- end project-hover -->
+            </div><!-- end project -->
+
+            <div class="project mix cat-web cat-school" data-myorder="3">
+                <div class="project-hover">
+                    <h3>Simpele promotie website school project</h3>
+                    <div class="actions">
+                        <!--<a href="#" class="btn">Meer info</a>-->
+                        <a href="http://www.bramreinold.nl/portfolio/shopmate" target="_blank" class="btn">Website</a>
                     </div><!-- end actions -->
                 </div><!-- end project-hover -->
             </div><!-- end project -->
@@ -156,20 +167,20 @@
 
     </section><!-- end section projects-->
 
-    <div id="animatedModal">
-        <!--THIS IS IMPORTANT! to close the modal, the class name has to match the name given on the ID  class="close-animatedModal" -->
-        <div class="close-animatedModal">
-            Sluiten
-        </div>
+    <!--<div id="animatedModal">-->
+        <!--&lt;!&ndash;THIS IS IMPORTANT! to close the modal, the class name has to match the name given on the ID  class="close-animatedModal" &ndash;&gt;-->
+        <!--<div class="close-animatedModal">-->
+            <!--Sluiten-->
+        <!--</div>-->
 
-        <div class="modal-content">
-            <div class="project-title">Poezendorp van der Vorst</div>
-            <h1>Poezendorp van der Vorst</h1>
+        <!--<div class="modal-content">-->
+            <!--<div class="project-title">Poezendorp van der Vorst</div>-->
+            <!--<h1>Poezendorp van der Vorst</h1>-->
 
-            <h4>Projectinformatie:</h4>
-            <h4>Ontwikkeld met:</h4>
-        </div>
-    </div>
+            <!--<h4>Projectinformatie:</h4>-->
+            <!--<h4>Ontwikkeld met:</h4>-->
+        <!--</div>-->
+    <!--</div>-->
 
     <!--
     ## PROJECTS SECTION
